# PnC_Algorithm_Exploration_On_Carla--WIP--

./: README.md  REAL_TIME_FACTOR_CHANGES.md  updated_version.txt
Algorithm_test/: demo_for_jerk_path_problem.py  test_EKF.py  test_QP_planning.py  test_kalman.py
map_load/: CMakeLists.txt  package.xml  setup.cfg  setup.py
map_load/map_load/: __init__.py  frenet_qp_planner.py  map_control.py  math_utils.py  path_smoother.py  speed_planner.py  vehicle_perception.py
map_load/msg/: EgoPlanningTrajectory.msg  FrenetPath.msg  LocalPlanningPath.msg  PathBoundary.msg  PlanningObstacle.msg  PlanningObstacleArray.msg  PlanningPathPoint.msg  PlanningSpeedProfile.msg  PlanningTrajectoryPoint.msg  SLBoundary.msg  SLBoundaryArray.msg  STGraph.msg  STObstacleRegion.msg
map_load/resource/: rviz_map_zitu._fixed.osm
scenario_set/: following_scenario.py
vehicle_ctrl/: README_PLOTTING.md  package.xml  setup.py
vehicle_ctrl/config/: carla_control_params.json  objects.json
vehicle_ctrl/launch/: full_system.launch.py
vehicle_ctrl/rviz2/: carla_map_spawn_anywherev2.rviz  mubiao.py  rgb_cam.rviz  ros话题.txt
vehicle_ctrl/vehicle_ctrl/: SIMPLE_CTRL_QUICK_REFERENCE.txt  __init__.py  bicycle_model_ekf.py  carla_vehicle_control.py  constants.py  lat_long_ctrl.py  pid_controller.py  remap_goal.py  simple_ctrl.py  simple_ctrl修改说明.txt  stanley_controller.py  vehicle_plotter.py
